# ntc-rosetta

./: .gitignore  .gitmodules  .readthedocs.yml  .travis.yml  CHANGELOG.rst  Dockerfile  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
docs/: CHANGELOG.rst  CONTRIBUTING.rst  Makefile  build_supported_models.py  conf.py  index.rst  requirements.txt
docs/api/: drivers.rst  helpers.rst  index.rst  rosetta.rst  yang.rst
docs/cli/: index.rst
docs/models/: index.rst
docs/models/matrix/: index.rst  ntc_parser.rst  ntc_translator.rst  openconfig_parser.rst  openconfig_translator.rst
docs/models/ntc/: index.rst
docs/models/openconfig/: index.rst
docs/tutorials/: Contributing.ipynb  Rosetta-and-Yangson-walkthrough.ipynb  YANG-for-dummies.ipynb  index.rst  ios_merging.ipynb  ios_navigating_data.ipynb  ios_parsing.ipynb  ios_smart_diff.ipynb  ios_translate.ipynb  junos_parsing.ipynb  junos_translate.ipynb  rosetta_and_yangson_walkthrough.ipynb
ntc_rosetta/: __init__.py
ntc_rosetta/cli/: __init__.py  linter.py  print_model.py  print_processor.py
ntc_rosetta/drivers/: base.py  dummy.py  ios.py  junos.py  vyos.py
ntc_rosetta/helpers/: ios.py  json_helpers.py  request_list.py  vyos.py  xml_helpers.py
ntc_rosetta/helpers/junos/: __init__.py
ntc_rosetta/parsers/: __init__.py
ntc_rosetta/translators/: __init__.py
ntc_rosetta/yang/: __init__.py  openconfig.json
ntc_rosetta/yang/ntc-yang-models/: .readthedocs.yml  .travis.yml  Dockerfile  Makefile  README.md
tests/: Vagrantfile
tests/models/: test_models.py
(+285 files in other folders)
