[tool.poetry]
name = "ntc_rosetta"
version = "0.2.0"
description = "The missing bridge between industry standard CLIs and YANG"
authors = ["David Barroso <dbarrosop@dravetech.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.scripts]
ntc_rosetta = 'ntc_rosetta.cli:run'

[tool.poetry.dependencies]
python = "^3.6"
jmespath = "^0.9.3"
lxml = "^4.3"
click = "^7.0"
yangify = "^0.1.1"

[tool.poetry.dev-dependencies]
pytest = "^4.2"
black = { version = "19.3b0", allows-prereleases = true }
pylama = "^7.6"
flake8-import-order = "^0.18.0"
mypy = "^0.701.0"
pytest-pythonpath = "^0.7.3"
pytest-cov = "^2.6"
jupyter = "^1.0"
nbval = "^0.9.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
